fix z-index for biz show title card

--- a/frontend/src/components/BusinessShow/MainContent/share-modal.css
+++ b/frontend/src/components/BusinessShow/MainContent/share-modal.css
@@ -19,13 +19,12 @@
   align-items: center;
 }
 
-.share-modal-container {
+.share-modal-container,
+.share-modal-box {
   z-index: 2;
 }
 
 .share-modal-box {
-  z-index: 2;
-
   position: relative;
   background: #f9f9f9;
   display: flex;
