--- a/frontend/src/components/Loading/index.css
+++ b/frontend/src/components/Loading/index.css
@@ -1,15 +1,18 @@
 #loading-container {
-  margin: 100px;
+  margin: 30px 100px 100px;
   font-family: Rubik, sans-serif;
   font-size: 45px;
-  height: 56vh;
+  height: 64vh;
+
+  display: flex;
+  align-items: center;
   /* h1.prompt {
   } */
   & .loader {
     margin: auto;
-    border: 20px solid #eaf0f6;
+    border: 30px solid #eaf0f6;
     border-radius: 50%;
-    border-top: 20px solid #ff7a59;
+    border-top: 30px solid #ff7a59;
     width: 200px;
     height: 200px;
     /* animation-name: spinner;
@@ -24,8 +27,9 @@
     -webkit-animation: 4s 2 spinner; */
     /* animation: spinner 4s linear linfinite; */
     animation-name: spinner;
-    animation-duration: 4s;
+    animation-duration: 2.5s;
     animation-iteration-count: infinite;
+    animation-timing-function: linear;
   }
 }
 @keyframes spinner {
